Add styling to center name. Add glyphys for news items.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,3 +63,14 @@ legend.extra-padding {
     border-color:#828282;
 }
 
+.prisms-logo {
+    font-size: 30px;
+    letter-spacing: -1px;
+    text-shadow: 0 -1px 0 #8B8878;
+    color: #53868B;
+}
+
+.space-icon5 {
+    padding-right: 5px;
+}
+
