Updates from John and Larry.

--- a/partials/people.html
+++ b/partials/people.html
@@ -183,7 +183,11 @@
     </div>
     <div class="span8">
         <p>
-            Something here
+            My research is focused on computational materials modeling of the thermodynamics and kinetics of solid-state
+            atomistic processes through the development of new automated computational tools. In particular, I am
+            developing Monte Carlo methods which I use for fundamental studies of phase transitions and precipitate
+            formation in metal alloys, defect and dopant evolution in semiconductors, and degradation of nanoparticle
+            fuel cell catalysts.
         </p>
     </div>
 </div>
@@ -192,10 +196,10 @@
 
 <div class="row">
     <div class="span8">
-        <!-- <img width="100" height="150" src="assets/img/people/"> -->
-        <DIV style="font-weight: bold; font-size: 12pt; background: #cccccc; text-transform: uppercase; width: 130px; color: #ffffff;
-               line-height: 160px; height: 160px; text-align: center">No Photo
-        </DIV>
+        <img width="100" height="150" src="assets/img/people/laagesen/LarryAagesen.jpeg">
+        <!--<DIV style="font-weight: bold; font-size: 12pt; background: #cccccc; text-transform: uppercase; width: 130px; color: #ffffff;-->
+        <!--line-height: 160px; height: 160px; text-align: center">No Photo-->
+        <!--</DIV>-->
         <h5>Dr. Larry Aagesen</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:laagesen@umich.edu">laagesen@umich.edu</a></li>
@@ -332,12 +336,20 @@
         <h5>Dr. Margaret Hedstrom</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:hedstrom@umich.edu">hedstrom@umich.edu</a></li>
-            <li>Research: <a href="#">Something here</a></li>
+            <li>Research: <a href="http://www.si.umich.edu/people/margaret-hedstrom">http://www.si.umich.edu/people/margaret-hedstrom</a>
+            </li>
         </ul>
     </div>
     <div class="span8">
         <p>
-            Something here
+            My research focuses on the reuse of information and the cyberinfrastructure necessary to enable easy
+            exchange of data across disciplines and over time. I am the PI and Project Director for the
+            <a href="http://opendata.si.umich.edu">Open Data IGERT</a> (NSF 0903629) that engages PhD students and faculty at Michigan from
+            Information Science, Computer Science, Materials Science, Chemical Engineering and Bioinformatics in a
+            sustained investigation into the technologies, tools, standards, practices and cultural change necessary to
+            share and reuse scientific data. I am the PI for
+            <a href="http://sead-data.net">SEAD: Sustainable Environment Actionable Data</a> (NSF 09940824) – a multi-institutional collaboration that is developing
+            cyberinfrastructure for data sharing, preservation and reuse for sustainability science.
         </p>
     </div>
 </div>
