Update to move materialscommons

--- a/partials/materialscommons.html
+++ b/partials/materialscommons.html
@@ -1,1 +1,12 @@
-<h3>Under Construction</h3>
+<p>
+    We are developing a knowledge repository and virtual
+    collaboration space for curating, archiving and disseminating information from experiments
+    and computations as well as providing a collaborative platform for development of opensource
+    code with active involvement of a broader PRISMS open source community. This repository is called
+    Materials Commons.
+</p>
+
+<p>
+    Check back here and we'll let you know when the repository is available. We are working hard to build up our
+    repository of computational and experimental data and results.
+</p>
