Add more of John's functionality.

--- a/partials/front-page.html
+++ b/partials/front-page.html
@@ -1,23 +1,70 @@
-<div class="jumbotron">
-    <h3>Welcome</h3>
-
-    <p class="">
-        The Predictive Integrated Structural Materials Science (PRISMS) Center is dedicated to the development of
-        integrated multi-scale computations tools. These tools enable the prediction and analysis of microstructural
-        evolution and mechanical behavior of structural materials.
-    </p>
-</div>
-
-<hr>
-
 <div class="row-fluid marketing">
     <div class="span12">
-        <h4><i class="icon-bullhorn space-icon5"></i>News</h4>
-        <ul style="list-style-type: none;">
-            <li><i class="icon-arrow-right space-icon5"></i>PRISMS Center Launches in October 2012</li>
+        <h3>Overview</h3>
+
+        <p class="">
+            Combining the efforts of computational and experimental researchers, the goal of this center is development
+            of an integrated suite of validated computational tools that are designed to accelerate the development of
+            new structural metals.
+        </p>
+
+        <p>
+            Our Center is formally known as the DOE Software Innovation Center for Integrated Multi-Scale Modeling of
+            Structural Metals. We call it PRISMS for short which stands for PRedictive Integrated Structural Materials
+            Science. Our ambituous goal is for our PRISMS tools to be the extensible scientific core of the Integrated
+            Computational Materials Engineering
+        </p>
+
+        <p>
+            The goals of our center are:
+        </p>
+        <ol>
+            <li>
+                Establish an Integrated Multi-Scale Modeling Framework and Open Source Software (PRISMS)
+            </li>
+            <li>
+                Develop Advanced Open Source Computational Methods
+            </li>
+            <li>
+                Tightly Couple Experiments and Models
+            </li>
+            <li>
+                Application and Validation – <u>PRISMS Demonstrator</u>: Magnesium, Fatigue & Ductility
+            </li>
+            <li>
+                Establish the <u>Materials Commons</u>: An Open Source Knowledge Repository and Virtual Collaboration
+                Platform for the PRISMS Community
+            </li>
+        </ol>
+        <h4>Funding</h4>
+        <p>
+        The center is funded by a five year $11M grant from Department of Energy Basic Energy Science. This has been
+        coupled with $1.5M in cost-shared from UM, College of Engineering and the faculty and departments involved. The
+        funding comes from the Materials Genome Initiative, President Obama’s plan to double the speed with which
+        American scientists and engineers discover, develop, and manufacture new materials.
+        </p>
+        <h4>Center Computing Resources</h4>
+        The PRISMS center has a dedicated 2072 core cluster for running our models on. The cluster will be shared by our
+        different research groups as they develop our advanced open source computational models.
+        <img src="assets/img/PRISMS_Cluster.jpeg"  height="114px" width="217px">
+        <h4>Other Links</h4>
+        <ul>
+            <li><a href="http://www.whitehouse.gov/mgi">Materials Genome Initiative</a></li>
+            <li><a href="http://www.whitehouse.gov/administration/eop/ostp">Office of Science and Technology Policy</a></li>
+            <li><a href="http://www.ornl.gov/sci/cmsinn/talks/10_allison.pdf">Integrated Computational Materials Engineering Slides</a></li>
+            <li><a href="en.wikipedia.org/wiki/Integrated_computational_materials_engineering">ICME on Wikipedia</a></li>
         </ul>
     </div>
 </div>
 
-<hr>
+<!--<hr>-->
+
+<!--<div class="row-fluid marketing">-->
+    <!--<div class="span12">-->
+        <!--<h4><i class="icon-bullhorn space-icon5"></i>News</h4>-->
+        <!--<ul style="list-style-type: none;">-->
+            <!--<li><i class="icon-arrow-right space-icon5"></i>PRISMS Center Launches in October 2012</li>-->
+        <!--</ul>-->
+    <!--</div>-->
+<!--</div>-->
 
