--- a/partials/materialscommons.html
+++ b/partials/materialscommons.html
@@ -7,6 +7,11 @@
 </p>
 
 <p>
-    Check back here and we'll let you know when the repository is available. We are working hard to build up our
-    repository of computational and experimental data and results.
+    <b>Our Isilon Storage Cluster</b> - <i>390TB</i> of space for the Materials Commons repository!
+</p>
+<img src="assets/img/IsilonCluster.jpg" height="114px" width="217px">
+
+<p>
+    Check back here and we'll let you know when the repository is available. We are working hard to build the Materials
+    Commons set of tools and data.
 </p>
