--- a/partials/people.html
+++ b/partials/people.html
@@ -4,21 +4,21 @@
         <h5>Dr. John Allison - Center Director</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:johnea@umich.edu">johnea@umich.edu</a></li>
-            <li>Research: <a href="#">Something here</a></li>
+            <li>Research: <a href="http://www.mse.engin.umich.edu/people/johnea">http://www.mse.engin.umich.edu/people/johnea</a></li>
         </ul>
     </div>
     <div class="span8">
         <p>
-            Major research focus is on understanding the inter-relationships between processing,
-            microstructure and properties in advanced metallic materials and the utilization of
-            this knowledge to engineer metallic materials for use in engineering applications.
-            Central to this research are investigations on the mechanical behavior of materials,
-            with an emphasis on developing both a mechanistic and phenomenological understanding
-            of fatigue and creep processes. Current examples include development of micro-mechanical
-            models of deformation in reinforced metals and investigations on creep and fatigue of
-            aluminum and magnesium-matrix composites and titanium-aluminides. An additional area of
-            interest is in the implementation of new metals technology. This includes development of
-            methodologies for insuring structural durability and for assessing manufacturing costs.
+            My major research interest is in understanding the inter-relationships between processing, alloying,
+            microstructure and properties in metallic materials – and in incorporating this knowledge into computational
+            tools for use in research, education and engineering. An important part of my research is development of
+            Integrated Computational Materials Engineering (ICME) tools – and thus collaborations with other
+            computational and experimental groups are an essential element of my work. Central to my research are
+            investigations on the evolution of microstructures - current examples include precipitate evolution,
+            recrystallization and grain growth and texture development in magnesium, aluminum and titanium alloys. I am
+            also interested in mechanical behavior of these materials, with an emphasis on development of mechanistic
+            and phenomenological understanding of the influence of microstructure on properties such as strength,
+            ductility and fatigue resistance.
         </p>
     </div>
 </div>
@@ -344,11 +344,13 @@
         <p>
             My research focuses on the reuse of information and the cyberinfrastructure necessary to enable easy
             exchange of data across disciplines and over time. I am the PI and Project Director for the
-            <a href="http://opendata.si.umich.edu">Open Data IGERT</a> (NSF 0903629) that engages PhD students and faculty at Michigan from
+            <a href="http://opendata.si.umich.edu">Open Data IGERT</a> (NSF 0903629) that engages PhD students and
+            faculty at Michigan from
             Information Science, Computer Science, Materials Science, Chemical Engineering and Bioinformatics in a
             sustained investigation into the technologies, tools, standards, practices and cultural change necessary to
             share and reuse scientific data. I am the PI for
-            <a href="http://sead-data.net">SEAD: Sustainable Environment Actionable Data</a> (NSF 09940824) – a multi-institutional collaboration that is developing
+            <a href="http://sead-data.net">SEAD: Sustainable Environment Actionable Data</a> (NSF 09940824) – a
+            multi-institutional collaboration that is developing
             cyberinfrastructure for data sharing, preservation and reuse for sustainability science.
         </p>
     </div>
