--- a/partials/publications.html
+++ b/partials/publications.html
@@ -1,5 +1,49 @@
 <div class="row-fluid marketing">
     <div class="span8 offset2">
-        <h3>Please check back here often.</h3>
+
+        <div class="pub">
+            <span class="title">Integrated Computational Materials Engineering</span>
+            <span class="authors">J. E. Allison, M. Li, X. Su</span> 
+            <span class="venue"> in ASM Handbook on
+        Fundamentals of Modeling for Metals Processing, Vol 22A, D. U. Furrer and S. L. Semiatin, Eds, ASM
+        International, Metals Park, OH, 2009, pp 7-14.</span>
+        </div>
+
+        <div class="pub">
+            <span class="title">Integrated Computational Materials Engineering: A Transformational Discipline for Improved Competitiveness and National Security</span>
+            <span class="authors"> Tresa M. Pollock, John E. Allison, Daniel G. Backman, Mary C.
+        Boyce, Mark Gersh, Elizabeth A. Holm, Richard LeSar, Mike Long, Adam C. Powell, IV, John J. Schirra,
+        Deborah Demania Whitis, Christoper Woodward</span>
+            <span class="venue"> The National Academies Press, 500 Fifth Street, N.W.  Washington, DC 20001, 2008.</span>
+        </div>
+
+        <div class="pub">
+            <span class="title">Integrated Computational Materials Engineering: A Perspective on Progress and Future Steps</span>
+            <span class="authors"> John Allison </span>
+            <span class="venue">JOM, The Mineral, Metals and Materials Society, Warrendale, PA April 2011, p 15.
+            </span>
+        </div>
+
+        <div class="pub">
+            <span class="title">Integrated Computational Materials Engineering for Magnesium in Automotive Body Applications</span>
+            <span class="authors">John E. Allison, Baicheng Liu, Kevin Boyle, Lou Hector, Robert McCune</span>
+        <span class="venue">in Magnesium Technology, Proceedings of 2010 TMS Symposia, TMS (The Minerals, Metals & Materials Society), Warrendale, PA, 2010.  
+        </span>
+        </div>
+
+
+        <div class="pub">
+            <span class="title">Integrated Computational Materials Engineering: A New Paradigm for the Global Materials Profession</span>
+            <span class="authors">John Allison, Dan Backman and Leo Christodoulou</span>
+        <span class="venue">JOM, The Mineral, Metals and Materials Society, Warrendale, PA, November 2006, pp. 25-27.
+        </span>
+        </div>
+
+        <div class="pub">
+            <span class="title">Virtual Aluminum Castings: An Industrial Application of ICME </span>
+            <span class="authors">John Allison, Mei Li, C. Wolverton and XuMing Su</span>
+            <span class="venue">JOM, The Mineral, Metals and Materials Society, Warrendale, PA, November 2006, pp. 28-35.</span>
+        </div>
+
     </div>
 </div>
