--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,3 +74,54 @@ legend.extra-padding {
     padding-right: 5px;
 }
 
+.issue{
+    padding-bottom:20px;
+    padding-top:20px;
+    border-bottom: 1px #666 dashed;
+}
+
+.title{
+    font-weight:bold;
+}
+.venue {
+    font-style:italic;
+}
+
+.url {
+    display:block;
+}
+
+.pub{
+    padding-top:10px;
+}
+
+.pub a{
+    float: left;
+    font-size:xx-small;
+    padding: 2px;
+    margin-right:5px;
+    text-decoration: none;
+}
+
+.authors{
+    color:#333;
+}
+
+.address {
+
+}
+
+.box {
+    margin: auto;
+    width:100%;/*400px;*/
+    height:58px;
+    background: #B8B8B8; /*#808080;*/
+    color: #101010;
+    text-align: center;
+    border-radius: 15px;
+    font-size: 90%;
+}
+
+
+
+
