--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,11 +115,18 @@ legend.extra-padding {
     margin: auto;
     width:100%;/*400px;*/
     height:58px;
-    background: #B8B8B8; /*#808080;*/
+    background: #4682B4; /*#B8B8B8; #808080;*/
     color: #101010;
     text-align: center;
     border-radius: 15px;
     font-size: 90%;
+}
+
+.lengthScaleCarouselImg {
+    width: auto;
+    /*max-width: 100%;*/
+    height: 225px;
+    max-height: 225px;
 }
 
 
