--- a/partials/architecture.html
+++ b/partials/architecture.html
@@ -1,6 +1,6 @@
 
-<div class="row-fluid marketing">
-    <div class="span8 offset1">
+<div class="row-fluid">
+    <div class="span12">
         <h3>Overview</h3>
 
         <p>
