--- a/partials/front-page.html
+++ b/partials/front-page.html
@@ -1,4 +1,49 @@
-<div class="row-fluid marketing">
+<div class="row-fluid">
+    <div class="span6 offset3">
+        <div id="length-scale-carousel" class="carousel slide">
+            <!--<ol class="carousel-indicators">-->
+            <!--<li data-target="#length-scale-carousel" data-slide-to="0" class="active"></li>-->
+            <!--<li data-target="#length-scale-carousel" data-slide-to="1"></li>-->
+            <!--<li data-target="#length-scale-carousel" data-slide-to="2"></li>-->
+            <!--<li data-target="#length-scale-carousel" data-slide-to="3"></li>-->
+            <!--</ol>-->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <!--<img src="assets/img/length-scales/macrostructure.png" height="150" width="150" alt=""/>-->
+                    <img src="assets/img/length-scales/macrostructure.png" alt=""/>
+                    <div class="carousel-caption">
+                        <p>Macrostructure: Grains, Macroporosity</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <!--<img src="assets/img/length-scales/microstructure.png" height="150" width="150" alt=""/>-->
+                    <img src="assets/img/length-scales/microstructure600x426.png" alt=""/>
+                    <div class="carousel-caption">
+                        <p>Microstructure: Denditres, Microporosity</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <!--<img src="assets/img/length-scales/nanostructure.png" height="150" width="150" alt=""/>-->
+                    <img src="assets/img/length-scales/nanostructure600x426.png" alt=""/>
+                    <div class="carousel-caption">
+                        <p>Nanostructure: Precipitates</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <!--<img src="assets/img/length-scales/atomic.png" height="150" width="150" alt=""/>-->
+                    <img src="assets/img/length-scales/atomic600x426.png" alt=""/>
+                    <div class="carousel-caption">
+                        <p>Atomic Structure: Crystal, Interface</p>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control left" href="#length-scale-carousel" data-slide="prev">&lsaquo;</a>
+            <a class="carousel-control right" href="#length-scale-carousel" data-slide="next">&rsaquo;</a>
+        </div>
+    </div>
+</div>
+
+<div class="row-fluid">
     <div class="span12">
         <h3>Overview</h3>
 
@@ -11,8 +56,9 @@
         <p>
             Our Center is formally known as the DOE Software Innovation Center for Integrated Multi-Scale Modeling of
             Structural Metals. We call it PRISMS for short which stands for PRedictive Integrated Structural Materials
-            Science. Our ambituous goal is for our PRISMS tools to be the extensible scientific core of the Integrated
-            Computational Materials Engineering
+            Science. Our ambitious goal is for our PRISMS tools to be the extensible scientific core of the <a
+                href="http://en.wikipedia.org/wiki/Integrated_computational_materials_engineering">Integrated
+            Computational Materials Engineering</a>.
         </p>
 
         <p>
@@ -37,22 +83,26 @@
             </li>
         </ol>
         <h4>Funding</h4>
+
         <p>
-        The center is funded by a five year $11M grant from Department of Energy Basic Energy Science. This has been
-        coupled with $1.5M in cost-shared from UM, College of Engineering and the faculty and departments involved. The
-        funding comes from the Materials Genome Initiative, President Obama’s plan to double the speed with which
-        American scientists and engineers discover, develop, and manufacture new materials.
+            The center is funded by a five year $11M grant from Department of Energy Basic Energy Science. This has been
+            coupled with $1.5M in cost-shared from UM, College of Engineering and the faculty and departments involved.
+            The
+            funding comes from the <a href="http://www.whitehouse.gov/mgi">Materials Genome Initiative</a>, President
+            Obama’s plan to double the speed with which
+            American scientists and engineers discover, develop, and manufacture new materials.
         </p>
         <h4>Center Computing Resources</h4>
         The PRISMS center has a dedicated 2072 core cluster for running our models on. The cluster will be shared by our
         different research groups as they develop our advanced open source computational models.
-        <img src="assets/img/PRISMS_Cluster.jpeg"  height="114px" width="217px">
+        <img src="assets/img/PRISMS_Cluster.jpeg" height="114px" width="217px">
         <h4>Other Links</h4>
         <ul>
-            <li><a href="http://www.whitehouse.gov/mgi">Materials Genome Initiative</a></li>
-            <li><a href="http://www.whitehouse.gov/administration/eop/ostp">Office of Science and Technology Policy</a></li>
-            <li><a href="http://www.ornl.gov/sci/cmsinn/talks/10_allison.pdf">Integrated Computational Materials Engineering Slides</a></li>
-            <li><a href="en.wikipedia.org/wiki/Integrated_computational_materials_engineering">ICME on Wikipedia</a></li>
+            <li><a href="http://www.whitehouse.gov/administration/eop/ostp">Office of Science and Technology Policy</a>
+            </li>
+            <li><a href="http://www.ornl.gov/sci/cmsinn/talks/10_allison.pdf">Integrated Computational Materials
+                Engineering Slides</a></li>
+            <li><a href="assets/img/ICME_At_UMICH.png">ICME At the University of Michigan</a></li>
         </ul>
     </div>
 </div>
@@ -60,11 +110,11 @@
 <!--<hr>-->
 
 <!--<div class="row-fluid marketing">-->
-    <!--<div class="span12">-->
-        <!--<h4><i class="icon-bullhorn space-icon5"></i>News</h4>-->
-        <!--<ul style="list-style-type: none;">-->
-            <!--<li><i class="icon-arrow-right space-icon5"></i>PRISMS Center Launches in October 2012</li>-->
-        <!--</ul>-->
-    <!--</div>-->
+<!--<div class="span12">-->
+<!--<h4><i class="icon-bullhorn space-icon5"></i>News</h4>-->
+<!--<ul style="list-style-type: none;">-->
+<!--<li><i class="icon-arrow-right space-icon5"></i>PRISMS Center Launches in October 2012</li>-->
+<!--</ul>-->
+<!--</div>-->
 <!--</div>-->
 
