--- a/partials/publications.html
+++ b/partials/publications.html
@@ -1,5 +1,5 @@
-<div class="row-fluid marketing">
-    <div class="span8 offset2">
+<div class="row-fluid">
+    <div class="span12">
 
         <div class="pub">
             <span class="title">Integrated Computational Materials Engineering</span>
