--- a/partials/people.html
+++ b/partials/people.html
@@ -31,7 +31,7 @@
         <h5>Dr. Krishna Garikipati - Computational Group Lead</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:krishna@umich.edu">krishna@umich.edu</a></li>
-            <li>Research: <a href="http://comp-phys.engin.umich.edu/Main_Page">http://comp-phys.engin.umich.edu/Main_Page</a>
+            <li>Research: <a href="http://www-personal.umich.edu/~krishna/">http://www-personal.umich.edu/~krishna/</a>
             </li>
         </ul>
     </div>
@@ -178,7 +178,6 @@
         <h5>Dr. Brian Puchala</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:bpuchala@umich.edu">bpuchala@umich.edu</a></li>
-            <li>Research: <a href="#">Something here</a></li>
         </ul>
     </div>
     <div class="span8">
@@ -203,7 +202,6 @@
         <h5>Dr. Larry Aagesen</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:laagesen@umich.edu">laagesen@umich.edu</a></li>
-            <li>Research: <a href="#">Something here</a></li>
         </ul>
     </div>
     <div class="span8">
@@ -259,7 +257,7 @@
         <h5>Dr. Emmanuelle Marquis</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:emarq@umich.edu">emarq@umich.edu</a></li>
-            <li>Research: <a href="http://www-personal.umich.edu/~emarq/">http://www-personal.umich.edu/~emarq/</a></li>
+            <li>Research: <a href="https://sites.google.com/a/umich.edu/marquisgroup/">https://sites.google.com/a/umich.edu/marquisgroup/</a></li>
         </ul>
     </div>
     <div class="span8">
@@ -285,7 +283,7 @@
         <h5>Dr. Samantha Daly</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:samdaly@umich.edu">samdaly@umich.edu</a></li>
-            <li>Research: <a href="http://dalylabs.engin.umich.edu/Group.html">http://dalylabs.engin.umich.edu/Group.html</a>
+            <li>Research: <a href="http://dalylabs.engin.umich.edu">http://dalylabs.engin.umich.edu</a>
             </li>
         </ul>
     </div>
