Remove fake DOE grant number. Remove title for Krishna until I have the org chart.

--- a/partials/people.html
+++ b/partials/people.html
@@ -28,7 +28,7 @@
 <div class="row">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/krishna/krishna2.jpg">
-        <h5>Dr. Krishna Garikipati - Computational Group Lead</h5>
+        <h5>Dr. Krishna Garikipati</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:krishna@umich.edu">krishna@umich.edu</a></li>
             <li>Research: <a href="http://www-personal.umich.edu/~krishna/">http://www-personal.umich.edu/~krishna/</a>
