--- a/partials/front-page.html
+++ b/partials/front-page.html
@@ -48,7 +48,7 @@
         <h3>Overview</h3>
 
         <p class="">
-            Combining the efforts of computational and experimental researchers, the goal of this center is development
+            Combining the efforts of computational and experimental researchers, the goal of this Center is development
             of an integrated suite of validated computational tools that are designed to accelerate the development of
             new structural metals.
         </p>
@@ -62,7 +62,7 @@
         </p>
 
         <p>
-            The goals of our center are:
+            The goals of our Center are:
         </p>
         <ol>
             <li>
@@ -85,7 +85,7 @@
         <h4>Funding</h4>
 
         <p>
-            The center is funded by a five year $11M grant from Department of Energy Basic Energy Science. This has been
+            The Center is funded by a five year $11M grant from Department of Energy Basic Energy Science. This has been
             coupled with $1.5M in cost-shared from UM, College of Engineering and the faculty and departments involved.
             The
             funding comes from the <a href="http://www.whitehouse.gov/mgi">Materials Genome Initiative</a>, President
@@ -93,7 +93,7 @@
             American scientists and engineers discover, develop, and manufacture new materials.
         </p>
         <h4>Center Computing Resources</h4>
-        The PRISMS center has a dedicated 2072 core cluster for running our models on. The cluster will be shared by our
+        The PRISMS Center has a dedicated 2072 core cluster for running our models on. The cluster will be shared by our
         different research groups as they develop our advanced open source computational models.
         <img src="assets/img/PRISMS_Cluster.jpeg" height="114px" width="217px">
         <h4>Other Links</h4>
