--- a/partials/people.html
+++ b/partials/people.html
@@ -208,7 +208,7 @@
         <p>
             My research interests are in the use of theoretical and computational techniques to study the evolution of
             microstructures
-            and nanostructures during crystal growth, phase transformations, coarsening, and how this evolution affects
+            and nanostructures during crystal growth, phase transformations and coarsening, and how this evolution affects
             material
             properties in metals and semiconductors. Past work has employed phase-field modeling to predict
             microstructural evolution
