Add css styles for people page.
Add an index of people to the top of the people page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,14 @@ legend.extra-padding {
     max-height: 225px;
 }
 
+.people-heading {
+    margin-top:25px;
+}
+
+a.no-wrap {
+    white-space:nowrap;
+}
+
 
 
 
