--- a/partials/people.html
+++ b/partials/people.html
@@ -1,10 +1,46 @@
 <div class="row">
+    <p>
+    <h4>Center Director</h4>
+    <a href="#/prisms/people#johnea" class="nowrap">Dr. John Allison</a>
+    </p>
+
+    <p class="people-heading">
+    <h4>Computational Group</h4>
+    <a href="#/prisms/people#krishna" class="no-wrap">Dr. Krishna Garikipati</a>,
+    <a href="#/prisms/people#vikramg" class="no-wrap">Dr. Vikram Gavini</a>,
+    <a href="#/prisms/people#kthorn" class="no-wrap">Dr. Katsuyo Thornton</a>,
+    <a href="#/prisms/people#avdv" class="no-wrap">Dr. Anton Van der Ven</a>,
+    <a href="#/prisms/people#veeras" class="no-wrap">Dr. Veera Sundararaghavan</a>,
+    <a href="#/prisms/people#rudraa" class="no-wrap">Dr. Shiva Rudraraju</a>,
+    <a href="#/prisms/people#bpuchala" class="no-wrap">Dr. Brian Puchala</a>,
+    <a href="#/prisms/people#laagesen" class="no-wrap">Dr. Larry Aagesen</a>
+    </p>
+
+    <p class="people-heading">
+    <h4>Experimentalists Group</h4>
+    <a href="#/prisms/people#jonesjwa" class="no-wrap">Dr. Wayne Jones</a>,
+    <a href="#/prisms/people#emarq" class="no-wrap">Dr. Emmanuelle Marquis</a>,
+    <a href="#/prisms/people#samdaly" class="no-wrap">Dr. Samantha Daly</a>
+    </p>
+
+    <p class="people-heading">
+    <h4>Repository Group</h4>
+    <a href="#/prisms/people#jag" class="no-wrap">Dr. H.V. Jagadish</a>,
+    <a href="#/prisms/people#hedstrom" class="no-wrap">Dr. Margaret Hedstrom</a>,
+    <a href="#/prisms/people#gtarcea" class="no-wrap">V. Glenn Tarcea</a>
+    </p>
+</div>
+
+<hr>
+
+<div class="row" id="johnea">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/johnea/John_Allison.jpg">
         <h5>Dr. John Allison - Center Director</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:johnea@umich.edu">johnea@umich.edu</a></li>
-            <li>Research: <a href="http://www.mse.engin.umich.edu/people/johnea">http://www.mse.engin.umich.edu/people/johnea</a></li>
+            <li>Research: <a href="http://www.mse.engin.umich.edu/people/johnea">http://www.mse.engin.umich.edu/people/johnea</a>
+            </li>
         </ul>
     </div>
     <div class="span8">
@@ -25,7 +61,7 @@
 
 <legend class="extra-padding">Computational Group</legend>
 
-<div class="row">
+<div class="row" id="krishna">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/krishna/krishna2.jpg">
         <h5>Dr. Krishna Garikipati</h5>
@@ -49,7 +85,7 @@
 
 <hr>
 
-<div class="row">
+<div class="row" id="vikramg">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/vikramg/vikramg.jpg">
         <h5>Dr. Vikram Gavini</h5>
@@ -69,7 +105,7 @@
 
 <hr>
 
-<div class="row">
+<div class="row" id="kthorn">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/kthorn/Katsuyo_Thornton.jpg">
         <h5>Dr. Katsuyo Thornton</h5>
@@ -95,7 +131,7 @@
 
 <hr>
 
-<div class="row">
+<div class="row" id="avdv">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/avdv/Anton_Van%20der%20Ven.jpg">
         <h5>Dr. Anton Van der Ven</h5>
@@ -118,7 +154,7 @@
 
 <hr>
 
-<div class="row">
+<div class="row" id="veeras">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/veeras/veera2.jpg">
         <h5>Dr. Veera Sundararaghavan</h5>
@@ -146,7 +182,7 @@
 
 <hr>
 
-<div class="row">
+<div class="row" id="rudraa">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/rudraa/rudraa.jpg">
         <h5>Dr. Shiva Rudraraju</h5>
@@ -172,7 +208,7 @@
 
 <hr>
 
-<div class="row">
+<div class="row" id="bpuchala">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/bpuchala/brian.jpg">
         <h5>Dr. Brian Puchala</h5>
@@ -193,12 +229,9 @@
 
 <hr>
 
-<div class="row">
+<div class="row" id="laagesen">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/laagesen/LarryAagesen.jpeg">
-        <!--<DIV style="font-weight: bold; font-size: 12pt; background: #cccccc; text-transform: uppercase; width: 130px; color: #ffffff;-->
-        <!--line-height: 160px; height: 160px; text-align: center">No Photo-->
-        <!--</DIV>-->
         <h5>Dr. Larry Aagesen</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:laagesen@umich.edu">laagesen@umich.edu</a></li>
@@ -208,7 +241,8 @@
         <p>
             My research interests are in the use of theoretical and computational techniques to study the evolution of
             microstructures
-            and nanostructures during crystal growth, phase transformations and coarsening, and how this evolution affects
+            and nanostructures during crystal growth, phase transformations and coarsening, and how this evolution
+            affects
             material
             properties in metals and semiconductors. Past work has employed phase-field modeling to predict
             microstructural evolution
@@ -223,10 +257,10 @@
 
 <legend class="extra-padding">Experimentalist Group</legend>
 
-<div class="row">
+<div class="row" id="jonesjwa">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/jonesjwa/J.%20Wayne_Jones.jpg">
-        <h5> Dr. Wayne Jones</h5>
+        <h5>Dr. Wayne Jones</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:jonesjwa@umich.edu">jonesjwa@umich.edu</a></li>
             <li>Research: <a href="http://www.mse.engin.umich.edu/people/faculty/jones">http://www.mse.engin.umich.edu/people/faculty/jones</a>
@@ -251,13 +285,14 @@
 
 <hr>
 
-<div class="row">
+<div class="row" id="emarq">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/emarq/Emmanuelle_Marquis.jpg">
         <h5>Dr. Emmanuelle Marquis</h5>
         <ul style="list-style-type: none;">
             <li>Email: <a href="mailto:emarq@umich.edu">emarq@umich.edu</a></li>
-            <li>Research: <a href="https://sites.google.com/a/umich.edu/marquisgroup/">https://sites.google.com/a/umich.edu/marquisgroup/</a></li>
+            <li>Research: <a href="https://sites.google.com/a/umich.edu/marquisgroup/">https://sites.google.com/a/umich.edu/marquisgroup/</a>
+            </li>
         </ul>
     </div>
     <div class="span8">
@@ -277,7 +312,7 @@
 
 <hr>
 
-<div class="row">
+<div class="row" id="samdaly">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/samdaly/Samantha_Daly.jpg">
         <h5>Dr. Samantha Daly</h5>
@@ -303,7 +338,7 @@
 
 <legend class="extra-padding">Repository Group</legend>
 
-<div class="row">
+<div class="row" id="jag">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/jag/Jag-web.jpg">
         <h5>Dr. H.V. Jagadish</h5>
@@ -328,7 +363,7 @@
 
 <hr>
 
-<div class="row">
+<div class="row" id="hedstrom">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/hedstrom/hedstrom_margaret_pp_1.jpg">
         <h5>Dr. Margaret Hedstrom</h5>
@@ -356,7 +391,7 @@
 
 <hr>
 
-<div class="row">
+<div class="row" id="gtarcea">
     <div class="span8">
         <img width="100" height="150" src="assets/img/people/gtarcea/Tarcea_image.jpg">
         <h5>V. Glenn Tarcea - Senior Developer</h5>
